--- a/index.html
+++ b/index.html
@@ -1,39 +1,28 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToDo</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>TO - DO List</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="box">
-            <h2>ToDo</h2>
-            <input type="text" placeholder="write the task here.." id="inputBx">
-            <ul id ="list"></ul>
+   <div class="container">
+        <div class="todo-app">
+            <h2>To-Do LIST <img src="images/icon.png" alt="this is icon"></h2>
+            <div class="row">
+                <input type="text" id="input-box" placeholder="Add your task">
+                <button onclick="addTask()">Add</button>
+            </div>
+            <ul id="list-container">
+                <!-- <li class="checked">Task 1</li>
+                <li>Task 2</li>
+                <li>Task 3</li> -->
+
+            </ul>
         </div>
-    </div>
-<script>
-    let inputBx=document.querySelector('#inputBx');
-    let list=document.querySelector('#list');
-    inputBx.addEventListener("keyup",function(event){
-        if(event.key=="Enter"){
-            addItem(this.value)
-            this.value=""
-        }
-    })
-    let addItem=(inputBx)=> {
-        let listItem=document.createElement("li");
-        listItem.innerHTML=`${inputBx}<i></i>`;
-            listItem.addEventListener("click",function(){
-                this.classList.toggle('done');
-            })
-            listItem.querySelector("i").addEventListener("click",function(){
-                listItem.remove();
-            })
-            list.appendChild(listItem);
-    }
-</script>
+   </div> 
+   <script src="script.js"></script>
 </body>
 </html>
